nav section added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <title>Hero Travel</title>
 </head>
 <body>
-    
+    <!-- header start here -->
+    <header>
+        <!-- nav code goes here -->
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h2>Hero <span class="primary-color">Travel</span></h2>
+            </div>
+
+            <div class="navbar">
+                <div class="menu">
+                  <a href="" class="primary-color" >Home</a>
+                  <a href="">Packages</a>
+                  <a href="">Testimonial</a>
+                  <a href="">Blog</a>
+                  <a href="">Contact</a>
+                </div>
+                <div class="menu-icon" id="menuIcon">&#8286;&#8286;&#8286;</div>
+            </div>
+        </nav>
+        <!-- nav code ends -->
+    </header>
+
+
+    <script src="style.js"></script>
 </body>
 </html>
